Pass algo parameters from FE & add synchronization for sharing memory (#14)
Signed-off-by: Liyun Xiu <xiliyun@amazon.com>